feat: 显示分析中任务
